# diaspora-service

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  out.txt  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: deployment.yml  docs.yml  lightsail-deploy-web-service.yml  lightsail-deploy.yml  lightsail.yml  tests.yml
1-running/: index.html
2-testing/: index.html
3-deploying/: index.html
action_provider/: Dockerfile  __init__.py  action_consume.py  action_produce.py  main.py  schema.json  utils.py
admin_console/: startup_script.sh
app/: app.py  main.py
common/: __init__.py  utils.py
deployment/: index.html
docs/: 1-running.md  2-testing.md  3-deploying.md  4-monitoring.md  acknowledgment.md  acknowledgments.md  deployment.md  running.md  testing.md
docs/ap/: api.md  examples.md
docs/console/: intro.md
docs/grafana-console/: intro.md
docs/kafka-console/: intro.md
docs/monitoring-console/: intro.md
docs/web/: api.md  examples.md
examples/: blocking_flows copy.ipynb  blocking_flows.ipynb  demo_to_flows.ipynb  demo_to_host.ipynb  sdk_and_flows.ipynb
kafka-console/: startup_script.sh
lambda/: lambda_function.py  lambda_function_ap.py  lambda_function_ws.py  layer_creation.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/1-running/: index.html
main/2-testing/: index.html
main/3-deploying/: index.html
main/4-monitoring/: index.html
main/acknowledgment/: index.html
main/acknowledgments/: index.html
main/ap/api/: index.html
main/ap/examples/: index.html
main/console/intro/: index.html
main/grafana-console/intro/: index.html
main/kafka-console/intro/: index.html
main/search/: search_index.json
main/web/api/: index.html
main/web/examples/: index.html
running/: index.html
search/: search_index.json
testing/: fixtures.py  globus.py  index.html
tests/: __init__.py  action_provider_consumer_test.py  action_provider_filter_consumer_test.py  action_provider_producer_test.py  action_provider_test.py  action_provider_utils_test.py  common_utils_test.py  conftest.py  consumer_service_test.py  db_service_test.py  edge_cases_test.py  error_paths_test.py  iam_service_test.py  kafka_service_test.py  main_test.py  namespace_service_test.py  web_service_test.py
web_service/: Dockerfile  __init__.py  consumer_models.py  consumer_service.py  main.py  services.py  utils.py
web_service_v3/: Dockerfile  __init__.py  conftest.py  coverage_analysis.md  main.py  responses.py  services.py  test_db_service.py  test_edge_cases.py  test_error_paths.py  test_iam_service.py  test_kafka_service.py  test_main.py  test_namespace_service.py  test_web_service.py  utils.py
web_service_v4/: Dockerfile  __init__.py  conftest.py  main.py  services.py  test_db_service.py  test_iam_service.py  test_kafka_service.py  test_namespace_service.py  test_web_service.py
