[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diaspora-service"
version = "0.0.1"
dependencies = [
    "aws-msk-iam-sasl-signer-python",
    "boto3",
    "diaspora-event-sdk",
    "fastapi",
    "flask",
    "globus_action_provider_tools",
    "globus_sdk",
    "gunicorn",
    "jinja2",
    "kafka-python",
    "requests",
    "uvicorn",
]

requires-python = ">=3.8"
authors = [{ name = "Haochen Pan" }, { email = "haochenpan@uchicago.edu" }]
description = "Diaspora Service"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://diaspora-project.github.io/"
repository = "https://github.com/haochenpan/diaspora-service"

[tool.setuptools.packages.find]
where = ["action_provider", "web_service"]

[project.optional-dependencies]
docs = [
    "black",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings",
    "mkdocstrings-python",
    "mike",
]
